--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+#home-link {
+  text-decoration: none;
+  color: white;
+  &:hover {
+    color: black;
+  }
+}
+
+#Medieval-Fantasy {
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
+  background-image: url(https://wallpaperaccess.com/full/1399270.jpg);
+
+}
