--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,33 @@
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+  <a class="navbar-brand" href="#">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+      </li>
+      <li class="nav-item">
+      </li>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://previews.123rf.com/images/kchung/kchung1812/kchung181200084/126832986-banni%C3%A8res-de-pop-corn-au-caramel-avec-des-cors-volants-et-des-articles-de-cin%C3%A9ma-en-illustration-3d.jpg);">
     <div class="container text-center">
-      <h1> CineMac, <strong>Movie Lists</strong> that <strong>suits your taste</strong>!</h1>
+      <h1> CineMac, <strong>Movie Lists</strong> that <strong>suit your taste</strong>!</h1>
       <p>Manage your movies list for optimal bindgewatching</p>
        <%= link_to "+ New list", new_list_path, class: "btn btn-primary p-3" %>
     </div>
