--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,28 +1,66 @@
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+  <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to "All lists", lists_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Action", "#", class: "dropdown-item" %>
+          <%= link_to "Another action", "#", class: "dropdown-item" %>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
 <div class="container">
   <h1><%= @list.name %></h1>
-
-   <div class="row">
-      <% @list.bookmarks.each do |bookmark| %>
-          <div class="col-6 text-center">
-            <div class="card-trip m-3">
+  <br>
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <% @list.bookmarks.each do |bookmark| %>
+            <div class="col-4">
+              <div class="card-trip m-3">
               <img src="<%= bookmark.movie.poster_url %> "/>
-              <div class="card-trip-infos">
-                <div>
-                  <h2><%= bookmark.movie.title %></h2>
-                  <p><%= bookmark.movie.overview %></p>
+                <div class="card-trip-infos">
+                  <div>
+                    <h2><%= bookmark.movie.title %></h2>
+                    <p><%= bookmark.movie.overview %></p>
+                  </div>
+                  <h2 class="card-trip-pricing"><%= bookmark.movie.rating %></h2>
+                  <br>
+                  <%= link_to "", bookmark_path(bookmark.id), method: :delete, class: "fa fa-trash" %>
                 </div>
-                <h2 class="card-trip-pricing"><%= bookmark.movie.rating %></h2>
-                <br>
-                <%= link_to "", bookmark_path(bookmark.id), method: :delete, class: "fa fa-trash" %>
+                <div class="border-top mx-3">
+                  <p><%= bookmark.comment %></p>
+                </div>
               </div>
             </div>
-          </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
-    <br>
-    <br>
-    <%= link_to "+ Add a movie", new_list_bookmark_path(@list.id) %>
-    <br>
-    <br>
-    <%= link_to "All lists",  lists_path %>
+    <div class="col-4">
+      <div class="border p-4 sticky-top" style="background-color: white">
+        <h2>Add a movie</h2>
+        <%= simple_form_for([@list, @bookmark]) do |f| %>
+          <%= f.association :movie, label:"Which movie?" %>
+          <%= f.input :comment, label:"Leave a comment" %>
+          <%= f.submit %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
