--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -34,13 +34,13 @@
         <% @list.bookmarks.each do |bookmark| %>
             <div class="col-4">
               <div class="card-trip m-3">
-              <img src="<%= bookmark.movie.poster_url %> "/>
+              <img src="<%= bookmark.movie.poster_url %> " style="object-fit:cover"/>
                 <div class="card-trip-infos">
                   <div>
                     <h2><%= bookmark.movie.title %></h2>
                     <p><%= bookmark.movie.overview %></p>
+                     <h2><%= bookmark.movie.rating %></h2>
                   </div>
-                  <h2 class="card-trip-pricing"><%= bookmark.movie.rating %></h2>
                   <br>
                   <%= link_to "", bookmark_path(bookmark.id), method: :delete, class: "fa fa-trash" %>
                 </div>
