--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,6 +2,7 @@
   <h1>Create your list</h1>
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name, label:"Name", placeholder: "The toon list" %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
   <% end %>
   <br>
