--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -38,7 +38,7 @@
     <h3>All Lists</h3>
     <% @lists.each do |list| %>
       <div class="col-4">
-        <div id="<%= list.name  %> " class="card-category m-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>)">
+        <div id="<%= list.name  %> " class="card-category m-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>)">
           <%= link_to list.name, list_path(list.id), id:"home-link" %>
         </div>
       </div>
