--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -38,9 +38,15 @@
     <h3>All Lists</h3>
     <% @lists.each do |list| %>
       <div class="col-4">
-        <div id="<%= list.name  %> " class="card-category m-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>)">
+      <% if list.photo.attached? %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
           <%= link_to list.name, list_path(list.id), id:"home-link" %>
         </div>
+        <% else %>
+        <div class="card-category m-3">
+          <%= link_to list.name, list_path(list.id), id:"home-link" %>
+        </div>
+      <% end %>
       </div>
     <% end %>
   </div>
