--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -24,10 +24,14 @@
   </div>
 </div>
 
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :thumb, gravity: :face %>')">
+    <div class="container text-center">
+      <h1><%= @list.name %></h1>
+    </div>
+  </div>
+
 
 <div class="container">
-  <h1><%= @list.name %></h1>
-  <br>
   <div class="row">
     <div class="col-8">
       <div class="row">
