--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -24,11 +24,13 @@
   </div>
 </div>
 
+<% if @list.photo.attached? %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :thumb, gravity: :face %>')">
     <div class="container text-center">
       <h1><%= @list.name %></h1>
     </div>
   </div>
+<% end %>
 
 
 <div class="container">
